newlsp going on

--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -7,5 +7,6 @@
         "/usr/local/lib/nvim",
         "/home/cawl/.local/state/nvim/lazy/readme",
         "${3rd}/luassert/library"
-    ]
+    ],
+    "workspace.checkThirdParty": false
 }
