--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -8,5 +8,8 @@
         "/home/cawl/.local/state/nvim/lazy/readme",
         "${3rd}/luassert/library"
     ],
-    "workspace.checkThirdParty": false
+    "workspace.checkThirdParty": false,
+    "diagnostics.disable": [
+        "undefined-global"
+    ]
 }
